--- a/data/video.yml
+++ b/data/video.yml
@@ -1,10 +1,7 @@
 enable : true
 heading: Other
 headingSpan : Videos
-videoItem :
-#- title : Come Together covered by Mamoru Satoh
-#  content : 2018.12.27 ワンマンライブ@汐留Blue Mood
-#  url: https://www.youtube.com/embed/X0TXGYT0B4g
+items :
 
 - title : Stormy Monday
   content : 2018/12 レコ発ワンマンライブ@汐留Blue Mood
