--- a/data/contact.yml
+++ b/data/contact.yml
@@ -8,5 +8,5 @@ mapLatitude : 51.5223477
 mapLongitude: -0.1622023
 contactDetails :
   - icon : tf-ion-ios-email-outline
-    info : "Email: msatohmusic@gmail.com"
+    info : "msatohmusic@gmail.com"
     
