--- a/data/video.yml
+++ b/data/video.yml
@@ -5,13 +5,12 @@ items :
 
 - title : Stormy Monday
   content : 2018/12 レコ発ワンマンライブ@汐留Blue Mood
-  url: https://www.youtube.com/embed/l0QFaPXkp1E
+  url: https://www.youtube.com/embed/KE8L8hVg98Q
 
 - title : I'm Tore Down
   content : 2018/12 レコ発ワンマンライブ@汐留Blue Mood
-  url: https://www.youtube.com/embed/ycyR6G9M7DA
+  url: https://www.youtube.com/embed/nDChkIdHqoQ
 
 - title : Live at The House Hotel
   content : in 2015 (Galway, Ireland)
   url: https://www.youtube.com/embed/xF1RvrS2mnU
-
