--- a/data/cd.yml
+++ b/data/cd.yml
@@ -4,6 +4,6 @@ description2 : アコースティックソロ
 date : 2018/12/27(木) 発売
 bgImage : images/backgrounds/bg-1.jpg
 cdImage : images/cd/not_for_eternity.jpg
-btnURL : https://youtu.be/b7A8FkHWuM4
+btnURL : https://youtu.be/qVf-sav5eSU
 btnText : アルバム視聴はこちら
 
