added another video

--- a/data/video.yml
+++ b/data/video.yml
@@ -11,6 +11,10 @@ items :
   content : 2018/12 レコ発ワンマンライブ@汐留Blue Mood
   url: https://www.youtube.com/embed/nDChkIdHqoQ
 
+- title : Instagram Guitar Improvisation
+  content : Englishman In New York (2017 Sep, Montreal, Canada)
+  url: https://www.youtube.com/embed/Y4A8_OSPIQ8
+
 - title : Live at The House Hotel
   content : in 2015 (Galway, Ireland)
   url: https://www.youtube.com/embed/xF1RvrS2mnU
