--- a/data/live.yml
+++ b/data/live.yml
@@ -4,17 +4,8 @@ headingSpan : Live
 item :
   - title : Can't Stop Jammin'
     date : 2/8(金)
-    time: 19:30オープン 20:00スタート
-    price: 投げ銭制（セッション参加者は1500円）
-    memo:
-    place : 阿佐ヶ谷 Gamuso
-    url: http://gamuso.com/
-
-
-  - title : Can't Stop Jammin'
-    date : 3/29(金)
     time: 19:00オープン 19:30スタート
-    price: 投げ銭制（セッション参加者は1500円）
+    price: 1500円 要2ドリンク別オーダー
     memo:
-    place : 阿佐ヶ谷 Gamuso
-    url: http://gamuso.com/
+    place : 西荻窪 LIVE BAR w.jaz（だぶじゃず）
+    url: https://wjazinfo.jimdo.com/
