--- a/data/ja/live.yml
+++ b/data/ja/live.yml
@@ -9,3 +9,11 @@ item :
     memo:
     place : 西荻窪 LIVE BAR w.jaz（だぶじゃず）
     url: https://wjazinfo.jimdo.com/
+  
+  - title : Can't Stop Jammin'
+    date : 3/31(日)
+    time: 19:00オープン 19:30スタート
+    price: 1500円
+    memo:
+    place : 沼袋 オルガンジャズクラブ abecafe
+    url: http://organjazzclub.dcthp.com/
