--- a/data/en/cd.yml
+++ b/data/en/cd.yml
@@ -1,9 +1,9 @@
 title : Not For Eternity
-description1 : 1stオリジナルアルバム(全９曲)
-description2 : アコースティックソロ
-date : 2018/12/27(木) 発売
+description1 : 1st solo album (acoustic)
+description2 : Mamoru Satoh:All songs, Vocals & guitars, and painting of the album artwork
+date : Released on 27th Dec 2018
 bgImage : images/backgrounds/bg-1.jpg
 cdImage : images/cd/not_for_eternity.jpg
 btnURL : https://youtu.be/qVf-sav5eSU
-btnText : アルバム試聴はこちら
+btnText : Listen to the album sampler
 
