--- a/data/en/video.yml
+++ b/data/en/video.yml
@@ -4,11 +4,11 @@ headingSpan : Videos
 items :
 
 - title : Stormy Monday
-  content : 2018/12 レコ発ワンマンライブ@汐留Blue Mood
+  content : Dec 2018 Live at Blue Mood, Tokyo, Japan
   url: https://www.youtube.com/embed/KE8L8hVg98Q
 
 - title : I'm Tore Down
-  content : 2018/12 レコ発ワンマンライブ@汐留Blue Mood
+  content : Dec 2018 Live at Blue Mood, Tokyo, Japan
   url: https://www.youtube.com/embed/nDChkIdHqoQ
 
 - title : Instagram Guitar Improvisation
@@ -16,5 +16,5 @@ items :
   url: https://www.youtube.com/embed/Y4A8_OSPIQ8
 
 - title : Live at The House Hotel
-  content : in 2015 (Galway, Ireland)
+  content : In 2015 (Galway, Ireland)
   url: https://www.youtube.com/embed/xF1RvrS2mnU
