--- a/data/en/live.yml
+++ b/data/en/live.yml
@@ -1,6 +1,7 @@
 enable : true
 heading :
 headingSpan : Live schedule
+btnContent: 会場
 item :
   - title : Can't Stop Jammin'
     date : 8th Feb (Fri)
