--- a/data/en/video.yml
+++ b/data/en/video.yml
@@ -4,17 +4,21 @@ headingSpan : Videos
 items :
 
 - title : Stormy Monday
-  content : Dec 2018 Live at Blue Mood, Tokyo, Japan
+  content : Live at Blue Mood Tokyo Dec 2018
   url: https://www.youtube.com/embed/KE8L8hVg98Q
 
 - title : I'm Tore Down
-  content : Dec 2018 Live at Blue Mood, Tokyo, Japan
+  content : Live at Blue Mood Tokyo Dec 2018
   url: https://www.youtube.com/embed/nDChkIdHqoQ
+
+- title : What Is Your Story? (My original song)
+  content : Acoustic Live at Tenmado Tokyo Jan 2019
+  url: https://www.youtube.com/embed/435hmRelTbI
+
+- title : Key To The Highway
+  content : Acoustic Live at Tenmado Tokyo Jan 2019
+  url: https://www.youtube.com/embed/YM0PAew8Iqc  
 
 - title : Instagram Guitar Improvisation
   content : Englishman In New York (2017 Sep, Montreal, Canada)
   url: https://www.youtube.com/embed/Y4A8_OSPIQ8
-
-- title : Live at The House Hotel
-  content : In 2015 (Galway, Ireland)
-  url: https://www.youtube.com/embed/xF1RvrS2mnU
