--- a/data/ja/video.yml
+++ b/data/ja/video.yml
@@ -4,17 +4,21 @@ headingSpan : Videos
 items :
 
 - title : Stormy Monday
-  content : 2018/12 レコ発ワンマンライブ@汐留Blue Mood
+  content : レコ発ワンマンライブ@汐留Blue Mood 2018/12
   url: https://www.youtube.com/embed/KE8L8hVg98Q
 
 - title : I'm Tore Down
-  content : 2018/12 レコ発ワンマンライブ@汐留Blue Mood
+  content : レコ発ワンマンライブ@汐留Blue Mood 2018/12
   url: https://www.youtube.com/embed/nDChkIdHqoQ
+
+- title : What Is Your Story? (オリジナル曲)
+  content : アコースティックライブ＠天窓 2019/1
+  url: https://www.youtube.com/embed/435hmRelTbI
+
+- title : Key To The Highway
+  content : アコースティックライブ＠天窓 2019/1
+  url: https://www.youtube.com/embed/YM0PAew8Iqc  
 
 - title : Instagram Guitar Improvisation
   content : Englishman In New York (2017 Sep, Montreal, Canada)
   url: https://www.youtube.com/embed/Y4A8_OSPIQ8
-
-- title : Live at The House Hotel
-  content : in 2015 (Galway, Ireland)
-  url: https://www.youtube.com/embed/xF1RvrS2mnU
