--- a/data/en/cd.yml
+++ b/data/en/cd.yml
@@ -4,6 +4,6 @@ description2 : Mamoru Satoh:All songs, Vocals & guitars, and painting of the alb
 date : Released on 27th Dec 2018
 bgImage : images/backgrounds/bg-1.jpg
 cdImage : images/cd/not_for_eternity.jpg
-btnURL : https://youtu.be/qVf-sav5eSU
+btnURL : https://www.youtube.com/embed/jyOoB2tUBj8
 btnText : Listen to the album sampler
 
