--- a/data/ja/video.yml
+++ b/data/ja/video.yml
@@ -5,20 +5,24 @@ items :
 
 - title : Stormy Monday
   content : レコ発ワンマンライブ@汐留Blue Mood 2018/12
-  url: https://www.youtube.com/embed/KE8L8hVg98Q
-
-- title : I'm Tore Down
-  content : レコ発ワンマンライブ@汐留Blue Mood 2018/12
-  url: https://www.youtube.com/embed/nDChkIdHqoQ
+  url: https://www.youtube.com/embed/lsvBp8bfHTE
 
 - title : What Is Your Story? (オリジナル曲)
   content : アコースティックライブ＠天窓 2019/1
-  url: https://www.youtube.com/embed/435hmRelTbI
+  url: https://www.youtube.com/embed/ONfhlEmVGdg
 
 - title : Key To The Highway
   content : アコースティックライブ＠天窓 2019/1
-  url: https://www.youtube.com/embed/YM0PAew8Iqc  
+  url: https://www.youtube.com/embed/Gt5CR_qG9Vs  
+
+- title : Come Together (アコースティック)
+  content : アコースティックライブ＠天窓 2019/1
+  url : https://www.youtube.com/embed/3Dwj76MqYXk  
 
 - title : Instagram Guitar Improvisation
   content : Englishman In New York (2017 Sep, Montreal, Canada)
-  url: https://www.youtube.com/embed/Y4A8_OSPIQ8
+  url: https://www.youtube.com/embed/dXQsCsG3C_g
+
+- title : Instagram Guitar Improvisation
+  content : Slow Blues in C (2017 Sep, Montreal, Canada)
+  url: https://www.youtube.com/embed/nkO5bZlGXbY
