--- a/data/en/video.yml
+++ b/data/en/video.yml
@@ -3,6 +3,18 @@ heading: Other
 headingSpan : Videos
 items :
 
+- title : Highlights of my acoustic performance
+  content : Acoustic Live at Tenmado Tokyo Jan 2019
+  url: https://www.youtube.com/embed/ngHKc68JfJw
+
+- title : Highlights of my Soul/Blues/R&B style playing
+  content : Jam session at w.jaz Tokyo Jan 2019
+  url: https://www.youtube.com/embed/0nqYDgizILU
+
+- title : Come Together
+  content : Live at Blue Mood Tokyo Dec 2018
+  url: https://www.youtube.com/embed/5dsTfXwr-G0
+
 - title : Stormy Monday
   content : Live at Blue Mood Tokyo Dec 2018
   url: https://www.youtube.com/embed/lsvBp8bfHTE
