--- a/data/ja/video.yml
+++ b/data/ja/video.yml
@@ -3,8 +3,20 @@ heading: Other
 headingSpan : Videos
 items :
 
+- title : ダイジェスト -アコースティック演奏-
+  content : アコースティックライブ＠天窓 2019/1
+  url: https://www.youtube.com/embed/ngHKc68JfJw
+
+- title : ダイジェスト -Soul/Blues/R&Bスタイルの演奏-
+  content : ジャムセッション＠西荻窪w.jaz 2019/2
+  url: https://www.youtube.com/embed/0nqYDgizILU
+
+- title : Come Together
+  content : Live at Blue Mood Tokyo Dec 2018
+  url: https://www.youtube.com/embed/5dsTfXwr-G0
+
 - title : Stormy Monday
-  content : レコ発ワンマンライブ@汐留Blue Mood 2018/12
+  content : Live at Blue Mood Tokyo Dec 2018
   url: https://www.youtube.com/embed/lsvBp8bfHTE
 
 - title : What Is Your Story? (オリジナル曲)
