--- a/data/en/video.yml
+++ b/data/en/video.yml
@@ -3,12 +3,12 @@ heading: Other
 headingSpan : Videos
 items :
 
-- title : Highlights of my acoustic performance
-  content : Acoustic Live at Tenmado Tokyo Jan 2019
+- title : Acoustic gig
+  content : At Tenmado Tokyo Jan 2019
   url: https://www.youtube.com/embed/ngHKc68JfJw
 
-- title : Highlights of my Soul/Blues/R&B style playing
-  content : Jam session at w.jaz Tokyo Jan 2019
+- title : Live & Jam session
+  content : At w.jaz Tokyo Jan 2019
   url: https://www.youtube.com/embed/0nqYDgizILU
 
 - title : Come Together
