--- a/data/ja/video.yml
+++ b/data/ja/video.yml
@@ -3,12 +3,12 @@ heading: Other
 headingSpan : Videos
 items :
 
-- title : ダイジェスト -アコースティック演奏-
-  content : アコースティックライブ＠天窓 2019/1
+- title : -アコースティックライブ-
+  content : ＠四谷天窓 2019/1
   url: https://www.youtube.com/embed/ngHKc68JfJw
 
-- title : ダイジェスト -Soul/Blues/R&Bスタイルの演奏-
-  content : ジャムセッション＠西荻窪w.jaz 2019/2
+- title : -ライブ＆ジャムセッション-
+  content : ＠西荻窪w.jaz 2019/2
   url: https://www.youtube.com/embed/0nqYDgizILU
 
 - title : Come Together
