--- a/data/ja/cd.yml
+++ b/data/ja/cd.yml
@@ -1,6 +1,6 @@
 title : Not For Eternity
-description1 : 1stオリジナルアルバム(全９曲)
-description2 : アコースティックソロ
+description1 : 1stアルバム(アコースティック)
+description2 : Mamoru Satoh:全9曲作詞作曲、ジャケット絵・デザイン
 date : 2018/12/27(木) 発売
 bgImage : images/backgrounds/bg-1.jpg
 cdImage : images/cd/not_for_eternity.jpg
