--- a/data/ja/live.yml
+++ b/data/ja/live.yml
@@ -18,3 +18,11 @@ item :
     memo:
     place : 沼袋 オルガンジャズクラブ abecafe
     url: http://organjazzclub.dcthp.com/
+
+  - title : Can't Stop Jammin'
+    date : 4/19(金)
+    time: 19:00オープン 19:30スタート
+    price: 1500円 + 2ドリンクオーダー
+    memo:
+    place : 西荻窪 LIVE BAR w.jaz（だぶじゃず）
+    url: https://wjazinfo.jimdo.com/
