--- a/data/ja/live.yml
+++ b/data/ja/live.yml
@@ -3,13 +3,6 @@ heading :
 headingSpan : Live
 btnContent: 会場
 item :
-  - title : Sub Jam
-    date : 3/20(水)
-    time: 19:00オープン 19:30スタート
-    price: 1000円
-    memo:
-    place : 高円寺 Substore
-    url: https://substore.jimdo.com/
   
   - title : Can't Stop Jammin'
     date : 3/30(土)
@@ -26,3 +19,11 @@ item :
     memo:
     place : 西荻窪 LIVE BAR w.jaz（だぶじゃず）
     url: https://wjazinfo.jimdo.com/
+
+  - title : Can't Stop Jammin'
+    date : 5/12(日)
+    time: 19:00オープン 19:30スタート
+    price: 1500円
+    memo:
+    place : 沼袋 オルガンジャズクラブ abecafe
+    url: http://organjazzclub.dcthp.com/
