--- a/data/en/live.yml
+++ b/data/en/live.yml
@@ -20,6 +20,14 @@ item :
     place : 西荻窪(Nishiogikubo) LIVE BAR w.jaz
     url: https://wjazinfo.jimdo.com/
 
+  - title : Solo Concert
+    date : 6th May (Mon)
+    time:
+    price:
+    memo:
+    place : 高円寺(Koenji) Smokin’ Fish
+    url: https://smokin-fish-tokyo.business.site/
+
   - title : Can't Stop Jammin'
     date : 12th May (Sun)
     time: Open 19:00 Start 19:30
