--- a/data/ja/live.yml
+++ b/data/ja/live.yml
@@ -20,6 +20,14 @@ item :
     place : 西荻窪 LIVE BAR w.jaz（だぶじゃず）
     url: https://wjazinfo.jimdo.com/
 
+  - title : ワンマンライブ
+    date : 5/6(月)
+    time:
+    price:
+    memo:
+    place : 高円寺 Smokin’ Fish (スモーキン フィッシュ)
+    url: https://smokin-fish-tokyo.business.site/
+
   - title : Can't Stop Jammin'
     date : 5/12(日)
     time: 19:00オープン 19:30スタート
