--- a/data/ja/video.yml
+++ b/data/ja/video.yml
@@ -8,6 +8,10 @@ items :
   url: https://www.youtube.com/embed/ngHKc68JfJw
 
 - title : -ライブ＆ジャムセッション-
+  content : ＠沼袋Organ Jazz Club 2019/3
+  url: https://www.youtube.com/embed/JeC0OK8HORo
+
+- title : -ライブ＆ジャムセッション-
   content : ＠西荻窪w.jaz 2019/2
   url: https://www.youtube.com/embed/0nqYDgizILU
 
