--- a/data/en/live.yml
+++ b/data/en/live.yml
@@ -22,8 +22,8 @@ item :
 
   - title : Solo Concert
     date : 6th May (Mon)
-    time:
-    price:
+    time: Open 18:00 Starts 19:00
+    price: 2,500 Yen
     memo:
     place : 高円寺(Koenji) Smokin’ Fish
     url: https://smokin-fish-tokyo.business.site/
