--- a/data/ja/live.yml
+++ b/data/ja/live.yml
@@ -22,8 +22,8 @@ item :
 
   - title : ワンマンライブ
     date : 5/6(月)
-    time:
-    price:
+    time: 18:00オープン 19:00スタート
+    price: 2500円
     memo:
     place : 高円寺 Smokin’ Fish (スモーキン フィッシュ)
     url: https://smokin-fish-tokyo.business.site/
