--- a/data/en/live.yml
+++ b/data/en/live.yml
@@ -4,14 +4,6 @@ headingSpan : Live schedule
 btnContent: Venue
 item :
 
-  - title : Sub Jam
-    date : 17th Apr (Wed)
-    time: Open 19:00 Start 19:30
-    price: 1,000 Yen
-    memo:
-    place : 高円寺(Koenji) Sub Store
-    url: https://substore.jimdo.com/
-
   - title : Can't Stop Jammin'
     date : 19th Apr (Fri)
     time: Open 19:00 Start 19:30
@@ -20,18 +12,42 @@ item :
     place : 西荻窪(Nishiogikubo) LIVE BAR w.jaz
     url: https://wjazinfo.jimdo.com/
 
-  - title : Solo Concert
-    date : 6th May (Mon)
-    time: Open 18:00 Starts 19:00
-    price: 2,500 Yen
-    memo:
-    place : 高円寺(Koenji) Smokin’ Fish
-    url: https://smokin-fish-tokyo.business.site/
-
   - title : Can't Stop Jammin'
     date : 12th May (Sun)
     time: Open 19:00 Start 19:30
     price: 1,500 Yen
     memo:
-    place : 沼袋(Numabukuro) Organ Jazz Club abecafe
+    place : 沼袋(Numabukuro) Organ Jazz Club
     url: http://organjazzclub.dcthp.com/
+
+  - title : Solo Concert
+    date : 24th May (Fri)
+    time: Open 19:00 Starts 20:00
+    price: 2,000 Yen
+    memo:
+    place : 高円寺(Koenji) Smokin’ Fish
+    url: https://smokin-fish-tokyo.business.site/
+
+  - title : Blues Live in Geelong, Australia
+    date : 5th June (Wed)
+    time: Open 19:00 Start 19:30
+    price: 
+    memo:
+    place : Pistol Pete's Food N Blues (Geelong)
+    url: http://www.pistolpetesfoodnblues.com.au/
+
+  - title : Can't Stop Jammin'
+    date : 28th June (Fri)
+    time: Open 19:00 Start 19:30
+    price: 1,500 Yen
+    memo:
+    place : 沼袋(Numabukuro) Organ Jazz Club
+    url: http://organjazzclub.dcthp.com/
+
+  - title : Solo Concert Session Live
+    date : 26th July (Fri)
+    time: Open 19:00 Start 19:30
+    price: 3,000 Yen
+    memo:
+    place : 六本木(Roppongi) Bird Land
+    url: http://www.bird-land.co.jp/
