--- a/data/en/live.yml
+++ b/data/en/live.yml
@@ -43,3 +43,19 @@ item :
     memo:
     place : 六本木(Roppongi) Bird Land
     url: http://www.bird-land.co.jp/
+
+  - title : City Festivals（Germany）
+    date : 15th August (Thu) - 19th August (Mon)
+    time: 
+    price: 
+    memo:
+    place : Gifhorn, Wolfsburg, Braunschweig etc in Germany
+    url:
+
+  - title : Bike Festival（Croatia）
+    date : 26th August (Mon) - 1st September (Sun)
+    time: 
+    price: 
+    memo:
+    place : Pula, Croatia
+    url:
