--- a/data/ja/live.yml
+++ b/data/ja/live.yml
@@ -43,3 +43,19 @@ item :
     memo:
     place : 六本木バードランド
     url: http://www.bird-land.co.jp/
+
+  - title : ミュージックフェスティバル（ドイツ）
+    date : 8/15(木)〜8/19(月)
+    time: 
+    price: 
+    memo:
+    place : Gifhorn, Wolfsburg, Braunschweig etc, in Germany
+    url:
+
+  - title : バイクフェスティバル（クロアチア）
+    date : 8/26(月)〜9/1(日)
+    time: 
+    price: 
+    memo:
+    place : Pula, Croatia
+    url:
