--- a/data/en/live.yml
+++ b/data/en/live.yml
@@ -38,8 +38,8 @@ item :
 
   - title : Solo Concert Session Live
     date : 26th July (Fri)
-    time: Open 19:00 Start 19:30
-    price: 3,000 Yen
+    time: To be announced soon
+    price:
     memo:
     place : 六本木(Roppongi) Bird Land
     url: http://www.bird-land.co.jp/
