--- a/data/ja/live.yml
+++ b/data/ja/live.yml
@@ -38,8 +38,8 @@ item :
 
   - title : ワンマン セッションライブ
     date : 7/26(金)
-    time: 19:00オープン 19:30スタート
-    price: 3,000円
+    time: 未定
+    price:
     memo:
     place : 六本木バードランド
     url: http://www.bird-land.co.jp/
