--- a/data/ja/live.yml
+++ b/data/ja/live.yml
@@ -5,30 +5,6 @@ btnContent: 会場
 item :
 
   - title : Can't Stop Jammin'
-    date : 5/12(日)
-    time: 19:00オープン 19:30スタート
-    price: 1,500円
-    memo:
-    place : 沼袋 オルガンジャズクラブ abecafe
-    url: http://organjazzclub.dcthp.com/
-
-  - title : ソロ ワンマンライブ
-    date : 5/24(金)
-    time: 19:00オープン 20:00スタート
-    price: 2,000円
-    memo:
-    place : 高円寺 Smokin’ Fish
-    url: https://smokin-fish-tokyo.business.site/
-
-  - title : Blues Live in Geelong (Australia)
-    date : 6/5(水)
-    time: 19:00オープン 19:30スタート
-    price: 
-    memo:
-    place : Pistol Pete's Food N Blues (Geelong in Australia)
-    url: http://www.pistolpetesfoodnblues.com.au/
-
-  - title : Can't Stop Jammin'
     date : 6/28(金)
     time: 19:00オープン 19:30スタート
     price: 1,500円
@@ -38,7 +14,7 @@ item :
 
   - title : ワンマン セッションライブ
     date : 7/26(金)
-    time: 未定
+    time: 詳細未定
     price:
     memo:
     place : 六本木バードランド
