--- a/data/en/video.yml
+++ b/data/en/video.yml
@@ -3,6 +3,10 @@ heading: Other
 headingSpan : Videos
 items :
 
+- title : Live at Blue Mood
+  content : Highlight (vocal & guitar)
+  url: https://www.youtube.com/embed/Fz-8eDPpAG0
+  
 - title : Acoustic gig
   content : At Tenmado Tokyo Jan 2019
   url: https://www.youtube.com/embed/ngHKc68JfJw
