--- a/data/ja/video.yml
+++ b/data/ja/video.yml
@@ -3,6 +3,10 @@ heading: Other
 headingSpan : Videos
 items :
 
+- title : ワンマンライブ at Blue Mood
+  content : ハイライト動画(ボーカル・ギター)
+  url: https://www.youtube.com/embed/Fz-8eDPpAG0
+
 - title : -アコースティックライブ-
   content : ＠四谷天窓 2019/1
   url: https://www.youtube.com/embed/ngHKc68JfJw
