--- a/data/en/video.yml
+++ b/data/en/video.yml
@@ -3,6 +3,10 @@ heading: Other
 headingSpan : Videos
 items :
 
+- title : My performance (Original and covers)
+  content : Concerts from 2018-2019
+  url: https://www.youtube.com/embed/JD_Q0awyy4w
+
 - title : Live at Blue Mood
   content : Highlight (vocal & guitar)
   url: https://www.youtube.com/embed/Fz-8eDPpAG0
@@ -18,26 +22,6 @@ items :
 - title : Live & Jam session
   content : At w.jaz Tokyo Feb 2019
   url: https://www.youtube.com/embed/0nqYDgizILU
-
-- title : Come Together
-  content : Live at Blue Mood Tokyo Dec 2018
-  url: https://www.youtube.com/embed/5dsTfXwr-G0
-
-- title : Stormy Monday
-  content : Live at Blue Mood Tokyo Dec 2018
-  url: https://www.youtube.com/embed/lsvBp8bfHTE
-
-- title : What Is Your Story? (My original song)
-  content : Acoustic Live at Tenmado Tokyo Jan 2019
-  url: https://www.youtube.com/embed/ONfhlEmVGdg
-
-- title : Key To The Highway
-  content : Acoustic Live at Tenmado Tokyo Jan 2019
-  url: https://www.youtube.com/embed/Gt5CR_qG9Vs
-
-- title : Come Together (Acoustic)
-  content : Acoustic Live at Tenmado Tokyo Jan 2019
-  url : https://www.youtube.com/embed/3Dwj76MqYXk  
 
 - title : Instagram Guitar Improvisation
   content : Englishman In New York (2017 Sep, Montreal, Canada)
