--- a/data/ja/video.yml
+++ b/data/ja/video.yml
@@ -3,6 +3,10 @@ heading: Other
 headingSpan : Videos
 items :
 
+- title : ライブ(オリジナルとカバー)
+  content : ライブ2018-2019
+  url: https://www.youtube.com/embed/JD_Q0awyy4w
+
 - title : ワンマンライブ at Blue Mood
   content : ハイライト動画(ボーカル・ギター)
   url: https://www.youtube.com/embed/Fz-8eDPpAG0
@@ -18,26 +22,6 @@ items :
 - title : -ライブ＆ジャムセッション-
   content : ＠西荻窪w.jaz 2019/2
   url: https://www.youtube.com/embed/0nqYDgizILU
-
-- title : Come Together
-  content : Live at Blue Mood Tokyo Dec 2018
-  url: https://www.youtube.com/embed/5dsTfXwr-G0
-
-- title : Stormy Monday
-  content : Live at Blue Mood Tokyo Dec 2018
-  url: https://www.youtube.com/embed/lsvBp8bfHTE
-
-- title : What Is Your Story? (オリジナル曲)
-  content : アコースティックライブ＠天窓 2019/1
-  url: https://www.youtube.com/embed/ONfhlEmVGdg
-
-- title : Key To The Highway
-  content : アコースティックライブ＠天窓 2019/1
-  url: https://www.youtube.com/embed/Gt5CR_qG9Vs  
-
-- title : Come Together (アコースティック)
-  content : アコースティックライブ＠天窓 2019/1
-  url : https://www.youtube.com/embed/3Dwj76MqYXk  
 
 - title : Instagram Guitar Improvisation
   content : Englishman In New York (2017 Sep, Montreal, Canada)
