discord link videos and basic info updated

--- a/data/en/video.yml
+++ b/data/en/video.yml
@@ -7,30 +7,22 @@ items :
   content : TV advert
   url: https://www.youtube.com/embed/dUtCEd_BPFY
 
-- title : My performance (Original and covers)
-  content : Concerts from 2018-2019
-  url: https://www.youtube.com/embed/JD_Q0awyy4w
+- title : My original song
+  content : Komorebi(木洩れ日)
+  url: https://www.youtube.com/embed/D2GQmPtbqTY
 
-- title : Live at Blue Mood
-  content : Highlight (vocal & guitar)
-  url: https://www.youtube.com/embed/Fz-8eDPpAG0
-  
-- title : Acoustic gig
-  content : At Tenmado Tokyo Jan 2019
-  url: https://www.youtube.com/embed/ngHKc68JfJw
+- title : What Is City Pop?
+  content : Explained in 3 mins
+  url: https://www.youtube.com/embed/DIzg4buVcYQ
 
-- title : Live & Jam session
-  content : At Organ Jazz Club Tokyo Mar 2019
-  url: https://www.youtube.com/embed/JeC0OK8HORo
+- title : Top 5 City Pop Guitar Solos
+  content : Guitar Solo Cover with TABs
+  url: https://www.youtube.com/embed/6pdI7lJr1oY
 
-- title : Live & Jam session
-  content : At w.jaz Tokyo Feb 2019
-  url: https://www.youtube.com/embed/0nqYDgizILU
+- title : Top 10 City Pop Artists
+  content : Must know
+  url: https://www.youtube.com/embed/hJVZCsGZSS4
 
-- title : Instagram Guitar Improvisation
-  content : Englishman In New York (2017 Sep, Montreal, Canada)
-  url: https://www.youtube.com/embed/dXQsCsG3C_g
-
-- title : Instagram Guitar Improvisation
-  content : Slow Blues in C (2017 Sep, Montreal, Canada)
-  url: https://www.youtube.com/embed/nkO5bZlGXbY
+- title : Top 5 CIty Pop Chord Progressions
+  content : Tutorial
+  url: https://www.youtube.com/embed/kb0WVB6tMPk
