--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseURL = "https://ms8music.com"
-title = "Masa (Mamoru Satoh)"
+title = "Masa (singer-songwriter/guitarist)"
 theme = "meghna-hugo"
 #languageCode = "ja"
 DefaultContentLanguage = "en"
@@ -50,10 +50,10 @@ DefaultContentLanguage = "en"
 # Site params
 [params]
 home= "Home"
-subtitle = "Neo City Pop singer-songwriter/guitarist"
-author = "Masa (Mamoru Satoh)"
-twitterAccount = "@ms8_music"
-description = "A Neo City Pop singersongwriter/guitarist from Japan, who has played TVCM, festivals & gigs over 30 cities. ネオシティポップ（モダンなシティポップ）系シンガーソングライター・ギタリスト。ドイツTVCM参加、ヨーロッパのフェスティバルを含む10ヶ国25都市で演奏。"
+subtitle = "Neo City Pop Artist"
+author = "Masa"
+twitterAccount = "@neo_citypop"
+description = "A Neo City Pop artist from Japan, who has played TVCM, festivals & gigs over 30 cities. ネオシティポップ（モダンなシティポップ）系シンガーソングライター・ギタリスト。ドイツTVCM参加、ヨーロッパのフェスティバルを含む10ヶ国25都市で演奏。"
 logo = ""
 gmapAPI = "https://maps.googleapis.com/maps/api/js?key=AIzaSyBI14J_PNWVd-m0gnUBkjmhoQyNyd7nllA"
 custom_css = []
@@ -63,8 +63,8 @@ custom_css = []
     enable = true
     youtubeURL = "https://www.youtube.com/embed/WWDOhnUylXg"
     bgImage = "images/slider/hero-area.jpg"
-    heading = "Mamoru Satoh"
-#    content= "シンガーソングライター・ギタリスト"
+    heading = "No Matter What, No Matter Where - Masa"
+#    content= "My original song"
 
     # footer
     [params.footer]
@@ -77,17 +77,13 @@ custom_css = []
         url = "https://www.youtube.com/channel/UCy3GKEYNPXgydRmLTCU9Qgw/"
 
         [[params.footer.socialIcon]]
+        icon = "tf-ion-chatbubbles"
+        url = "https://discord.gg/QyEQBY6"
+
+        [[params.footer.socialIcon]]
         icon = "tf-ion-social-instagram"
         url = "https://www.instagram.com/neo_citypop/"
 
         [[params.footer.socialIcon]]
         icon = "tf-ion-social-twitter"
-        url = "https://twitter.com/ms8_music"
-
-         [[params.footer.socialIcon]]
-        icon = "tf-ion-social-facebook"
-        url = "https://www.facebook.com/ms8music/"
-
-        [[params.footer.socialIcon]]
-        icon = "icomoon-soundcloud"
-        url = "https://soundcloud.com/user-212830831"
+        url = "https://twitter.com/neo_citypop"
