--- a/data/en/video.yml
+++ b/data/en/video.yml
@@ -1,6 +1,6 @@
 enable : true
-heading: Other
-headingSpan : Videos
+heading: YouTube
+headingSpan : Channel
 items :
 
 - title : TV commercial I played guitar
